<resources>
    <string name="app_name">TalkO</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_contact">Phone No.</string>
    <string name="prompt_dob">DOB</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="otp_textview">"Please enter the 5 digit OTP sent to your Email/Phone"</string>
    <string name="title_activity_main">TalkO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_message">Contact Name</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_chat_home">Chat</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_profile">ProfileActivity</string>


    <string name="title_activity_welcome">Welcome</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Instant Messaging!</string>
    <string name="slide_1_desc">The easiest way to chat with your favourite people!</string>

    <string name="slide_2_title">Voice Interaction!</string>
    <string name="slide_2_desc">A smart messaging app that helps you say more and do more!</string>

    <string name="slide_3_title">Fully Secured Environment!</string>
    <string name="slide_3_desc">Your data is only yours! Messages are only stored in your phone and the person you are chating with.</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact_us">Contact Us</string>
</resources>
