<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manojdas.admin.talko.LoginActivity">

    <!-- Login progress -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="228dp"
        android:layout_height="155dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="10dp"/>


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_24dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_contact_phone_black_24dp"
                android:hint="@string/prompt_contact"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date_range_24dp"
                android:editable="false"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/prompt_dob"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="10dp" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="onRegister"
        android:padding="20dp"
        android:text="@string/action_sign_in"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_form"
        app:layout_constraintVertical_bias="0.31" />

</android.support.constraint.ConstraintLayout>
